overflow fixed

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -5,6 +5,10 @@
 @import "text";
 @import "grid";
 
+html {
+    overflow-y: visible;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -24,6 +28,7 @@ body {
 }
 
 main {
+    padding-top: 140px;
     width: 100%;
     overflow-x: hidden;
     overflow-y: visible;
@@ -32,7 +37,6 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 140px;
 }
 
 // * COMPONENTS * //
